kubernetes/prod-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clamify-ui
  labels:
    app: clamify-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: clamify-ui
  template:
    metadata:
      labels:
        app: clamify-ui
    spec:
      containers:
      - name: clamify-ui
        image: ghcr.io/cdconn00/clamify-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
